gxps-images: Add support for JPEG images with GRAYSCALE color space

https://bugzilla.gnome.org/show_bug.cgi?id=744120